--- a/BFDC-Imjoy.html
+++ b/BFDC-Imjoy.html
@@ -20,12 +20,25 @@ It will also show the drift plot in the separate window.
   "ui": "Ops for tracing, applying and batch processing bright field drift. Select your operation type and check the parameters.",
   "inputs": null,
   "outputs": null,
+  "flags": ["single-instance", "allow-detach"],
   "icon": null,
   "env": "conda create -n imjoy python=3.7",
   "requirements": ["git+https://github.com/imodpasteur/Brightfield-Drift-Correction-3D.git@dev"],
   "dependencies": []
 }
 </config>
+
+<script lang="python">
+#"git+https://github.com/imodpasteur/Brightfield-Drift-Correction-3D.git@dev"
+import numpy as np
+import sys
+import os
+#sys.path.insert(0,'/Volumes/Imod-grenier/Andrey/Phase retrieve/drift-correction/BFDC/')
+from bfdc import drift
+import base64
+import asyncio
+import json
+
 
 
 class PythonPlugin():
@@ -35,6 +48,8 @@ class PythonPlugin():
 
     root = await api.getConfig('root')
     self.config_root(root)
+
+    #api.getConfig('root').then(self.config_root).catch(print)
     
     self.config = {"trace":{'xypixel':100, 
                             'zstep':100,
@@ -137,6 +152,8 @@ class PythonPlugin():
         print(args)
         drift.main(argsv=args, callback=self.show_progress)
     else:
+        #print("action")
+        #print("not supported")
         api.alert('Select action from drop down menu BFDC')
 
   def update_config(self, action,new_dict):
