--- a/BFDC-Imjoy.html
+++ b/BFDC-Imjoy.html
@@ -11,7 +11,7 @@ It will also show the drift plot in the separate window.
 
 <config lang="json">
 {
-  "name": "BFDC",
+  "name": "BFDC-test",
   "mode": "pyworker",
   "version": "0.1.0",
   "api_version": "0.1.1",
