remove local path

--- a/BFDC.imjoy.html
+++ b/BFDC.imjoy.html
@@ -33,7 +33,7 @@ It will also show the drift plot in the separate window.
 import numpy as np
 import sys
 import os
-sys.path.insert(0,'/Volumes/Imod-grenier/Andrey/Phase retrieve/drift-correction/BFDC/')
+#sys.path.insert(0,'/Volumes/Imod-grenier/Andrey/Phase retrieve/drift-correction/BFDC/')
 from bfdc import drift
 import base64
 import asyncio
