--- a/BFDC.imjoy.html
+++ b/BFDC.imjoy.html
@@ -20,7 +20,7 @@ It will also show the drift plot in the separate window.
   "ui": "Ops for tracing, applying and batch processing bright field drift. Select your operation type and check the parameters.",
   "inputs": null,
   "outputs": null,
-  "flags": ["single-instance", "allow-detach"],
+  "flags": [],
   "icon": null,
   "env": "conda create -n imjoy python=3.7",
   "requirements": ["git+https://github.com/imodpasteur/Brightfield-Drift-Correction-3D.git@v0.4.1"],
